# blog.rs

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  main.rs  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
assets/js/: code-copy.js
content/post/: maintainability-of-a-rust-codebase.md
content/post/boxed-vs-box-pin/: index.md
content/post/broomfilter-making-rust-as-fast-as-cpp/: index.md
content/post/broomfilter-making-rust-better-than-cpp/: index.md
content/post/sata-expansion-nightmare-asm1166/: index.md
macros/: Cargo.toml
macros/src/: lib.rs
post_macros/: Cargo.toml
post_macros/src/: lib.rs
public/style/: index.css
scripts/: dev.sh
src/: index.rs  lib.rs  main.rs
src/common/: layout.rs  mod.rs
src/component/: icons.rs
src/content/: meta.rs  mod.rs  post.rs
src/content/format/: highlight.rs
src/content/post/: highlight.rs  mod.rs  posts.rs  render.rs  types.rs
src/pages/: about.rs  index.rs  mod.rs  not_found.rs  posts.rs
src/state/: app.rs
style/: index.css
styles/: index.css
