[package]
name = "blog"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.8"
css-minify = "0.5.2"
maud = { version = "0.27.0", features = ["axum"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber = "0.3.22"
